--- a/Challenge-4/index.html
+++ b/Challenge-4/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="/js/script.js" defer></script>
+    <script src="/Challenge-4/js/script.js" defer></script>
   </head>
   <body>
     <section class="learn">
