--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./js/script.js" defer></script>
   </head>
   <body>
     <section class="learn">
